# GynOrg

./: .env.example  .gitignore  README.md  check_by_vacations.py  check_by_vacations_postgres.py  check_tables.py  claude.md  cleanup_and_resync.py  docker-compose.yml  import_by_vacations.py  inspect_by_data.py  populate_by_vacations.py  run_global_sync.py  start.py  stop.py  terminal.txt  test_api.py  test_api_debug.py  test_db_query.py  test_repr.py  test_vacation_api.py
backend/: Dockerfile  alembic.ini  app.db.bak  check_db.py  conftest.py  goae_scraper.py  main.py  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 19fb7402e377_add_holiday_and_school_vacation_color_.py  9879900c2a64_init_postgres.py  a1b2c3d4e5f6_add_youngest_child_birth_year.py  b2c3d4e5f6g7_add_job_positions.py  c3d4e5f6g7h8_add_belegungsstatistik.py  d4e5f6g7h8i9_update_station_is_internal.py  e5f6g7h8i9j0_add_holiday_half_day_settings.py  f6g7h8i9j0k1_remove_color_from_absence_types.py  g7h8i9j0k1l2_refactor_absence_types.py  h8i9j0k1l2m3_add_system_settings.py  i9j0k1l2m3n4_add_goae_billing_module.py  o5p6q7r8s9t0_add_aufnahme_datum.py  p6q7r8s9t0u1_add_goae_extra_fields.py
backend/app/: __init__.py  main.py
backend/app/api/: llm.py
backend/app/core/: auth.py  colors.py  config.py  database.py
backend/app/data/: __init__.py  goae_import.py  (+1 more)
backend/scripts/: recalculate_durations.py
backend/tests/: test_config_holiday_management.py  test_holiday_admin_api.py  test_holiday_management_e2e.py  test_holiday_scheduler.py  test_holiday_startup_service.py
(+400 files in other folders)
