[tool.poetry]
name = "gynorg-backend"
version = "0.1.0"
description = "GynOrg Backend API"
authors = ["MGanser"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlmodel = "^0.0.14"
bcrypt = "^4.1.2"
python-dotenv = "^1.0.0"
httpx = "^0.25.2"
pydantic = "^2.5.0"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
